--- a/week9/stylesheet.css
+++ b/week9/stylesheet.css
@@ -9,7 +9,11 @@ body {
 
 header {
 	background-color: black;
-	height: 6.7%;
+	height: 140px;
+}
+
+section {
+	display: block;
 }
 
 #black {
@@ -115,6 +119,9 @@ button {
 ul {
 	white-space: nowrap;
 	overflow-x: auto;
+	
+	margin-top: 9%;
+	
 }
 
 li {
@@ -123,12 +130,14 @@ li {
 	vertical-align: top;
 	white-space: nowrap;
 	overflow-x: auto;
+	margin-left: -4%;
 }
 
 figure {
 	background-color: aqua;
-	height: 500px;
-	width: 500px;
+	height: 460px;
+	width: 460px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.39);
 }
 
 #pf {
@@ -142,5 +151,36 @@ figure {
 	display: flex;
 	float: left;
 	margin: 32px;
+
+}
+
+#song {
+	text-align: center;
+	color: #919496;
+	font-size: 50px;
+	margin-top: 11%;
+}
+
+h4 {
+	text-align: center;
+	color: #C1C3C6;
+	font-size: 40px;
+	font-weight: 500;
+	margin-top: -4%;
+}
+
+#afspelen {
+	text-align: center;
+	color: #1DB954;
+	font-size: 40px;
+	margin-top: -5%;
+	letter-spacing: 6px;
+	font-weight: 550;
+}
+
+#2 {
+	color: aqua;
+	height: 10%;
+	width: 100%;
 
 }
